<resources>
    <string name="app_name">MANAS TIGER RESERVE</string>
    <string name="login_text">LOGIN</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="no_internet_warning_text">No internet available</string>
    <string name="restart">Restart</string>
    <string name="btc">BODOLAND TERRITORIAL COUNCIL</string>
    <string name="enter_visitor_details">ENTER VISITOR DETAILS</string>
    <string name="register_here">REGISTER HERE</string>
    <string name="logout">LOGOUT</string>
    <string name="welcome">WELCOME</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="register">REGISTER</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="confirm">CONFIRM</string>
    <string name="indian">Indian</string>
    <string name="foreign">Foreign</string>
    <string name="user_name">Name</string>
    <string name="nationality">Nationality</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="master_data">MASTER DATA</string>
    <string name="visitor_details">VISITOR DETAILS</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="india_btr">Indian (BTR)</string>
    <string name="records">RECORDS</string>
    <string name="btr">BTR</string>
    <string name="non_btr">Non-BTR</string>
    <string name="residency">Residency</string>
    <string name="sync">SYNC</string>
    <string name="add">ADD</string>
    <string name="delete">DELETE</string>
    <string name="enterdetails">Enter Details</string>
    <string name="manas_offline_visitor_entry">MANAS OFFLINE VISITOR ENTRY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>